[package]
name = "tetrus"
version = "0.1.0"
authors = ["CharlieKolb <charlie.kolb@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.13"
default-features = false
features = ["vulkan", "audio", "gltf"]

[dependencies]
log = { version = "0.4.8", features = ["serde"] }